# CppUnitTestFrameworkWrapper

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: mstest.h
test/: CMakeLists.txt  Test.tests.cpp
testhost/: CMakeLists.txt  guid.h  main.cpp  test.h  timehelpers.h  trxoutput.cpp  trxoutput.h
